--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,7 +7,7 @@
     <title>Projeto Git</title>
 </head>
 <body>
-    <h1>Titulo</h1>
-    
+    <h1>html é muito bom</h1>
+
 </body>
 </html>
